# pgAdminTUI

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  databases.yaml.example  debug_connection.py  debug_startup.py  debug_tabs.py  pgadmintui.spec  pyproject.toml  requirements-minimal.txt  requirements.txt  run.py  run_debug.sh  run_simple.py  run_with_logs.sh  run_with_tail.sh  setup.sh  test_app.py  test_connection.py  test_explorer.py  test_ui.py  view_logs.sh
.github/workflows/: ci.yml  release.yml
config/: default.yaml
config/commands/: blacklist.yaml  whitelist.yaml
docs/: filtering-implementation.md  filtering-spec.md
src/: __init__.py  main.py  main_backup.py  main_fixed.py  main_simple.py  main_working.py
src/core/: __init__.py  connection_manager.py  export_manager.py  filter_manager.py  query_executor.py  ui_settings.py
src/models/: __init__.py
src/ui/: __init__.py  events.py
src/ui/widgets/: __init__.py  data_table.py  explorer.py  export_dialog.py  filter_dialog.py  progress_dialog.py  resizable_containers.py  resizable_containers_v2.py  simple_filter_dialog.py
src/utils/: __init__.py  config.py  psql_emulator.py
